feat: eslint - limit file naming rule to src folder

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -291,8 +291,8 @@
     "check-file/filename-blocklist": [
       "error",
       {
-        "*.*.ts": "*.ts",
-        "*.*.tsx": "*.tsx"
+        "src/**/*.*.ts": "*.ts",
+        "src/**/*.*.tsx": "*.tsx"
       }
     ],
     /**
