--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "animal-shelter",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "schema": "./src/prisma/schema.prisma"
+  },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "eslint --fix"
@@ -16,6 +19,8 @@
     "test": "echo No test has been added yet."
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
+    "@prisma/client": "^6.0.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
@@ -45,6 +50,7 @@
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.49",
     "prettier": "^3.4.1",
+    "prisma": "^6.0.1",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.17.0"
