--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^6.0.1",
     "@vercel/blob": "^0.27.0",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "next": "15.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
