--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "pg": "npx prisma generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^6.0.1",
     "@vercel/blob": "^0.27.0",
     "next": "15.1.0",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-hook-form": "^7.54.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -53,7 +56,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.49",
-    "prettier": "^3.4.1",
+    "prettier": "^3.4.2",
     "prisma": "^6.0.1",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2",
