config: package.json - add dependencies

--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "pg": "npx prisma generate"
   },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.9.1",
+    "@mui/material": "^6.2.1",
+    "@mui/material-nextjs": "^6.2.1",
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^6.0.1",
     "@vercel/blob": "^0.27.0",
